--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-https://github.com/hariom045418/Portfolio.git
+"homepage": "https://github.com/hariom045418/Portfolio.git",
+
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
